--- a/index.html
+++ b/index.html
@@ -262,8 +262,8 @@
 <body>
     <!-- PANTALLA DE LOGIN -->
     <div id="loginScreen" class="login-container">
-        <div class="logo">🏭</div>
-        <h1>Aldremarkz</h1>
+        <div class="logo">https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.facebook.com%2FALDREMARKZ87%2Fmentions%2F&psig=AOvVaw3aY1omrpCeOZaX0Ur9SQBp&ust=1763244382177000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCPjl1LDT8pADFQAAAAAdAAAAABAL</div>
+        <h1> ALFARERIA ALDREMARKZ</h1>
         <p class="subtitle">Portal Interno - Acceso Restringido</p>
         
         <input type="password" id="passwordInput" class="password-input" placeholder="Ingresa la contraseña" onkeypress="checkEnter(event)">
