--- a/index.html
+++ b/index.html
@@ -37,8 +37,18 @@
         }
 
         .logo {
-            font-size: 2.5rem;
-            margin-bottom: 1rem;
+            width: 120px;
+            height: 120px;
+            margin: 0 auto 1.5rem auto;
+            border-radius: 50%;
+            overflow: hidden;
+            border: 4px solid #e74c3c;
+            box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+        }
+        .logo img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
         }
 
         h1 {
@@ -263,7 +273,7 @@
     <!-- PANTALLA DE LOGIN -->
     <div id="loginScreen" class="login-container">
         <div class="logo">
-    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.facebook.com%2FALDREMARKZ87%2Fmentions%2F&psig=AOvVaw3aY1omrpCeOZaX0Ur9SQBp&ust=1763244382177000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCPjl1LDT8pADFQAAAAAdAAAAABAL" alt="Aldremarkz Logo">
+    <img src="https://scontent.ftij3-2.fna.fbcdn.net/v/t39.30808-6/481089799_1236845988447214_7987660007168056837_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=cc71e4&_nc_ohc=QSMKyle_6F4Q7kNvwGamibm&_nc_oc=AdkiVldUy6lMbYNXl369b42OcFLmhchEZ7y3XDIw-ZLJG_h4Rn1lPPTMnPMNhV6q344&_nc_zt=23&_nc_ht=scontent.ftij3-2.fna&_nc_gid=gIkdTH4TK4gnllEdljqKOA&oh=00_Afg7j-DScBD9ZeQJ2GGenimDe5SiHBQ85tDmGAx4EgQ94Q&oe=691D76DE" alt="Aldremarkz Logo">
 </div>
         <p class="subtitle">Portal Interno - Acceso Restringido</p>
         
